fix(session): enforce descriptor-relative workspace confinement